--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,3 +11,9 @@
     </ion-item>
   </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title size="small">Version {{ version }}</ion-title>
+  </ion-toolbar>
+</ion-footer>
