--- a/src/app/pages/abilities/abilities.page.html
+++ b/src/app/pages/abilities/abilities.page.html
@@ -54,11 +54,11 @@
           ><br />
         </ion-card-subtitle>
       </ion-card-header>
-      <ion-card-content>
+      <ion-card-content *ngIf="(traits$ | async) as traits">
         <p
           size="x-small"
           class="ion-text-justify"
-          *ngFor="let trait of (traits$ | async)"
+          *ngFor="let trait of traits"
         >
           <strong>{{ trait.intitule }}</strong> : {{ trait.description }}
         </p>
@@ -71,10 +71,10 @@
           class="ion-text-justify"
           *ngFor="let racial of racials"
         >
-          <strong
-            >{{ racial.limitation === 1 ? 'Limitation raciale' : 'Capacité
-            raciale' }} &#8226; {{ racial.capacite }}</strong
-          >
+          <strong>
+            {{ racial.limitation === 1 ? 'Limitation raciale' : 'Capacité
+            raciale' }} &#8226; {{ racial.capacite }}
+          </strong>
           : {{ racial.description }}
         </p>
       </ion-card-content>
