--- a/src/app/pages/equipment/equipment.page.html
+++ b/src/app/pages/equipment/equipment.page.html
@@ -20,9 +20,10 @@
       <ion-card>
         <ion-card-header>
           <ion-card-title>{{ equipment.designation }}</ion-card-title>
-          <ion-card-subtitle
-            >Prix : {{ equipment.prix }} {{ currency }}</ion-card-subtitle
-          >
+          <ion-card-subtitle 
+            *ngIf="equipment.prix"
+            >Prix : {{ equipment.prix }} {{ currency }}
+          </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
           <div *ngIf="equipment.props !== ''">
