Added support for COF2

--- a/src/app/pages/abilities/abilities.page.html
+++ b/src/app/pages/abilities/abilities.page.html
@@ -19,29 +19,34 @@
     <ion-card *ngFor="let race of (race$ | async)">
       <ion-card-header>
         <ion-card-subtitle>
-          <ion-badge color="medium" *ngIf="race?.mod_for !== null">
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_for)">
             FOR : {{ race?.mod_for > 0 ? '+' : '' }}{{ race?.mod_for }}
           </ion-badge>
-          <span *ngIf="race?.mod_for !== null">&nbsp;</span>
-          <ion-badge color="medium" *ngIf="race?.mod_dex !== null">
-            DEX : {{ race?.mod_dex > 0 ? '+' : '' }}{{ race?.mod_dex }}
+          <span *ngIf="hasMod(race?.mod_for)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_dex)">
+            {{ getName("DEX") }} : {{ race?.mod_dex > 0 ? '+' : '' }}{{ race?.mod_dex }}
           </ion-badge>
-          <span *ngIf="race?.mod_dex !== null">&nbsp;</span>
-          <ion-badge color="medium" *ngIf="race?.mod_con !== null">
+          <span *ngIf="hasMod(race?.mod_dex)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_con)">
             CON : {{ race?.mod_con > 0 ? '+' : '' }}{{ race?.mod_con }}
           </ion-badge>
-          <span *ngIf="race?.mod_con !== null">&nbsp;</span>
-          <ion-badge color="medium" *ngIf="race?.mod_int !== null">
+          <span *ngIf="hasMod(race?.mod_con)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_int)">
             INT : {{ race?.mod_int > 0 ? '+' : '' }}{{ race?.mod_int }}
           </ion-badge>
-          <span *ngIf="race?.mod_int !== null">&nbsp;</span>
-          <ion-badge color="medium" *ngIf="race?.mod_sag !== null">
-            SAG : {{ race?.mod_sag > 0 ? '+' : '' }}{{ race?.mod_sag }}
+          <span *ngIf="hasMod(race?.mod_int)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_sag)">
+            {{ getName("SAG") }} : {{ race?.mod_sag > 0 ? '+' : '' }}{{ race?.mod_sag }}
           </ion-badge>
-          <span *ngIf="race?.mod_sag !== null">&nbsp;</span>
-          <ion-badge color="medium" *ngIf="race?.mod_cha !== null">
-            CHA : {{ race?.mod_cha > 0 ? '+' : '' }}{{ race?.mod_cha }} </ion-badge
-          ><br />
+          <span *ngIf="hasMod(race?.mod_sag)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="datasetService.is('cof2') && hasMod(race?.mod_vol)">
+            VOL : {{ race?.mod_vol > 0 ? '+' : '' }}{{ race?.mod_vol }}
+          </ion-badge>
+          <span *ngIf="datasetService.is('cof2') && hasMod(race?.mod_vol)">&nbsp;</span>
+          <ion-badge color="medium" *ngIf="hasMod(race?.mod_cha)">
+            CHA : {{ race?.mod_cha > 0 ? '+' : '' }}{{ race?.mod_cha }} 
+          </ion-badge>
+          <br />
           <ion-badge color="medium">
             Âge : {{ race?.age_base}}+ (max : {{ race?.esperance_vie }})&nbsp; </ion-badge
           ><br />
@@ -57,10 +62,11 @@
       <ion-card-content *ngIf="(traits$ | async) as traits">
         <p
           size="x-small"
-          class="ion-text-justify"
           *ngFor="let trait of traits"
         >
-          <strong>{{ trait.intitule }}</strong> : {{ trait.description }}
+          <span *ngIf="trait.intitule !== 'Caracs'">
+            <strong>{{ trait.intitule }}</strong> : {{ trait.description }}
+          </span>
         </p>
       </ion-card-content>
     </ion-card>
@@ -68,7 +74,6 @@
       <ion-card-content>
         <p
           size="x-small"
-          class="ion-text-justify"
           *ngFor="let racial of racials"
         >
           <strong>
@@ -81,7 +86,6 @@
     </ion-card>
     <ion-card *ngIf="notes !== null && notes !== ''">
       <ion-card-content
-        class="ion-text-justify"
         [innerHTML]="notes | formatNotes"
       ></ion-card-content>
     </ion-card>
@@ -97,7 +101,6 @@
         </ion-card-title>
       </ion-card-header>
       <ion-card-content
-        class="ion-text-justify"
         [innerHTML]="ability.description | formatDescription"
       ></ion-card-content>
     </ion-card>
