Duplicated notes formatter pipe for equipment to generate app

--- a/src/app/pages/equipment/equipment.page.html
+++ b/src/app/pages/equipment/equipment.page.html
@@ -34,7 +34,7 @@
             </span>
           </div>
           <div *ngIf="equipment.notes !== ''" size="x-small"
-          [innerHTML]="equipment.notes | formatNotes"
+          [innerHTML]="equipment.notes | formatEquipNotes"
           ></div>
         </ion-card-content>
       </ion-card>
