--- a/src/app/pages/equipment/equipment.page.html
+++ b/src/app/pages/equipment/equipment.page.html
@@ -22,7 +22,7 @@
           <ion-card-title>{{ equipment.designation }}</ion-card-title>
           <ion-card-subtitle 
             *ngIf="equipment.prix"
-            >Prix : {{ equipment.prix }} {{ currency }}
+            >Prix : {{ getPrice(equipment.prix) }}
           </ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
